# dbgphmm

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  read.fa  requirements.txt  test.dot  test.fa
.github/workflows/: rust.yml  static.yml
benches/: my_bench.rs
data/: test.dot  test.fa
python/dbgphmm/: __init__.py
scripts/: 221103_mcmc.sh  augment_dbg.py  b.sh  benchmark.sh  compare.sh  datasets.sh  dbgphmm.py  dense_vs_sparse.py  em-freq.sh  em.sh  em_hist_plot.py  em_plotter.py  em_summary_plot.py  forward_plotter.py  forward_vs_state.py  freqs_plotter.py  graph.py  h.sh  igv.sh  json_test.py  kir.sh  kmer-freq.sh  l.sh  m.sh  mapping.sh  n.sh  opti.sh  parsers.py  plotter.py  query.py  r.sh  read_forward_compare.py  rep.sh  sim.sh  submit.sh  summary_time.py  t.sh  t2.sh  t3.sh  test.sh  (+7 more)
scripts/batch/: job.sh  submit.sh
scripts/dbgviz/: index.html  main.js
scripts/job/: .gitignore  bulk.sh  inspect_bulk.sh  large_k.sh  low_p_infer.sh  sample_posterior.sh  submit.sh
scripts/kir/: 01.txt  alts.txt  dotplot.py  filter.sh  graph_compare.py  hifiasm.sh  join.py  lift.py  lja.sh  pick_alt.sh  poisson.py  qv.py  ref_trim.py  run.sh  sam_to_fa.py  stats.py  stats.sh  t2t.sh  unique_kmer.py
src/: bench_test.rs  benchmark.rs  cli.rs  common.rs  compressed_dbg.rs  copy_nums.rs  counter.rs  cycles.rs  dbg.rs  distribution.rs  e2e.rs  em.rs  float.rs  genome.rs  graph.rs  graph_public.rs  greedy.rs  hashdbg.rs  hist.rs  hmm.rs  hmmv2.rs  hmmv3.rs  hoge.rs  inspect.rs  io.rs  json.rs  kmer.rs  lib.rs  linkedlist.rs  main.rs  main3.rs  mcmc.rs  min_flow.rs  mocks.rs  multi_dbg.rs  my_array_vec.rs  my_iterator.rs  my_vec.rs  optimizer.rs  parall.rs  (+20 more)
src/common/: collection.rs
src/compressed_dbg/: cycle.rs  output.rs
src/dbg/: bench.rs  compare.rs  cycle.rs  dbg.rs  debug.rs  draft.rs  edge_centric.rs  float.rs  flow_intersection.rs  flow_intersections.rs  greedy.rs  hashdbg.rs  hashdbg_v2.rs  hint.rs  impls.rs  intersections.rs  json.rs  mocks.rs  multi_dbg.rs  neighbor.rs  output.rs  phmm.rs  traverse.rs
src/em/: compression.rs  e2e.rs  extension.rs  float.rs  scheduler.rs  task.rs
src/graph/: active_nodes.rs  backless_bellman_ford.rs  bellman_ford.rs  bipartite.rs  compact.rs  cycle.rs  cycle_enumeration.rs  cycle_space.rs  euler.rs  float_seq_graph.rs  float_weight.rs  floyd.rs  genome_graph.rs  iterators.rs  k_shortest.rs  min_mean_weight_cycle.rs  mocks.rs  node_mapping.rs  seq_graph.rs  shortest_cycle.rs  spanning_tree.rs  utils.rs
src/graph_public/: cycle.rs  cycle_enumeration.rs
src/hmm/: base.rs  cdbg.rs  common.rs  copy_nums.rs  dbg.rs  fdbg.rs  forward.rs  layer.rs  linear.rs  new.rs  params.rs  sampler.rs  seqgraph.rs  table.rs  testing.rs  veclikewrap.rs
src/hmmv2/: active_nodes.rs  backward.rs  bench.rs  common.rs  forward.rs  freq.rs  hint.rs  mocks.rs  new.rs  params.rs  q.rs  result.rs  sample.rs  seqgraph.rs  speed.rs  table.rs  table_ref.rs  tablev2.rs  tests.rs  tests_dbg.rs  trans_table.rs
src/hmmv3/: active_nodes.rs  backward.rs  common.rs  forward.rs  freq.rs  hint.rs  mocks.rs  result.rs  table_ref.rs  tests_dbg.rs  trans_table.rs
src/io/: cytoscape.rs  fasta.rs  json.rs
src/kmer/: README.md  common.rs  counter.rs  kmer.rs  quadarray.rs  segment.rs  tinykmer.rs  veckmer.rs
src/min_flow/: base.rs  convex.rs  flow.rs  flow_rate.rs  mocks.rs  residue.rs  utils.rs  zero_demand.rs
src/multi_dbg/: draft.rs  neighbors.rs  output.rs  posterior.rs  toy.rs
src/optimizer/: annealer.rs  base.rs  bestfreq.rs  cdbg.rs  dbg.rs  (+4 more)
tests/: hmm.rs
(+53 files in other folders)
