[package]
name = "dbgphmm"
version = "0.1.0"
authors = ["Ryo Nakabayashi <ryonakabayashi@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "dbgphmm"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ndarray-linalg/openblas-system"]
python = []
intel = ["ndarray-linalg/intel-mkl-system"]

[dev-dependencies]
test-case = "1.2.3"

[dependencies]
bio = "*"
rand = "0.8"
rand_xoshiro = "*"
approx = "*"
arrayvec = { version = "*", features = ["serde"] }
fnv = "1.0.3"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
log = "0.4"
env_logger = "0.8.4"
petgraph_algos = { git = "https://github.com/ryought/petgraph_algos" }
rustflow = { git = "https://github.com/ryought/rustflow" }
# rustflow = { path = "../rustflow" }
sparsevec = { git = "https://github.com/ryought/sparsevec" }
libm = "*"
histo = "0.1.0"
rayon = "*"
serde = "*"
serde_json = "1.0"
serde_with = "1.10.0"
itertools = "*"
jemallocator = "0.3.0"
jemalloc-ctl = "*"
petgraph = { version = "0.6.0", features = ["serde-1"] }
derive-new = "0.5"
fixedbitset = "*"
# below setting does not work in mac
# pyo3 = { version = "0.17.1", features = ["extension-module"] }
pyo3 = { version = "0.17.1" }
chrono = "*"
indicatif = { version = "*", features = ["rayon"] }
flate2 = "1.0.25"
ndarray = "*"
ndarray-linalg = { version = "*", default-features = false }

[package.metadata.maturin]
# /python/dbgphmm as root of python module
python-source = "python"
